--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,75 @@
   </script>
   <!-- end Mixpanel -->
 
+  <style>
+    #snackbar {
+      visibility: hidden;
+      min-width: 250px;
+      margin-left: -125px;
+      background-color: #4ca6ff;
+      color: #fff;
+      text-align: center;
+      border-radius: 10px;
+      padding: 16px;
+      position: fixed;
+      z-index: 1;
+      left: 50%;
+      top: 100px;
+      font-size: 17px;
+    }
+
+    #snackbar.show {
+      visibility: visible;
+      -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+      animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    }
+
+    @-webkit-keyframes fadein {
+      from {
+        top: 0;
+        opacity: 0;
+      }
+      to {
+        top: 100px;
+        opacity: 0.9;
+      }
+    }
+
+    @keyframes fadein {
+      from {
+        top: 0;
+        opacity: 0;
+      }
+      to {
+        top: 100px;
+        opacity: 0.9;
+      }
+    }
+
+    @-webkit-keyframes fadeout {
+      from {
+        top: 100px;
+        opacity: 0.9;
+      }
+      to {
+        top: 100px;
+        opacity: 0;
+      }
+    }
+
+    @keyframes fadeout {
+      from {
+        top: 100px;
+        opacity: 0.9;
+      }
+      to {
+        top: 100px;
+        opacity: 0;
+      }
+    }
+
+  </style>
+
 </head>
 
 <body>
@@ -175,6 +244,7 @@
     <div class="blob blob-4"></div>
     <img src="./assets/images/logo.png" />
   </div>
+  <div id="snackbar"></div>
 
 </body>
 
