--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,19 @@
 
   </script>
   <!-- end Mixpanel -->
+  <script>
+    var fscSession = {
+      'reset': true,
+      'products': [{
+        'path': 'botsoft-pro',
+        'quantity': 1
+      }]
+    }
+
+  </script>
+  <script id="fsc-api" src="https://d1f8f9xcsvx3ha.cloudfront.net/sbl/0.7.5/fastspring-builder.min.js" type="text/javascript"
+    data-storefront="botsoftstore.onfastspring.com">
+  </script>
 
   <style>
     #snackbar {
